RESOLVED FIXED307869
Enhanced <select>: picker is not properly anchored
https://bugs.webkit.org/show_bug.cgi?id=307869
Summary Enhanced <select>: picker is not properly anchored
Tim Nguyen (:ntim)
Reported 2026-02-13 16:40:15 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-13 16:40:20 PST
Tim Nguyen (:ntim)
Comment 2 2026-02-13 16:44:21 PST
EWS
Comment 3 2026-02-13 19:33:06 PST
Committed 307547@main (c9b2572fd959): <https://commits.webkit.org/307547@main> Reviewed commits have been landed. Closing PR #58684 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.