Enhanced <select>: picker is not properly anchored https://bugs.webkit.org/show_bug.cgi?id=307869 rdar://170356514

Reviewed by Simon Fraser.

Properly enable CSS anchor positioning in the UA stylesheet.

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/html/semantics/forms/the-select-element/customizable-select/select-events.optional-expected.txt:
* Source/WebCore/css/parser/CSSParserContext.cpp:
(WebCore::applyUASheetBehaviorsToContext):
(WebCore::add):
* Source/WebCore/css/parser/CSSParserContext.h:

Canonical link: https://commits.webkit.org/307547@main